--- a/styles.css
+++ b/styles.css
@@ -134,13 +134,23 @@ section.contactSection {
     transform: translateY(4px);
   }
 
-  .resumeSection {
+  .resume {
     padding: 100px;
     border: 1.5px solid black;
     border-radius: 3px;
     box-shadow: 10px 5px 10px rgb(97, 96, 96);
     max-width: 100%;
     margin: 100px;
+    font-family:Arial, Helvetica, sans-serif
+
+  }
+
+  #resumeTitle {
+    background: #ef8d25;
+    color: white;
+    
+
+
   }
 
   table, th, td {
